--- a/scenarioA/services/my-account/GCKey/sdiv-2.html
+++ b/scenarioA/services/my-account/GCKey/sdiv-2.html
@@ -215,20 +215,18 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <li>have a Personal Access Code (PAC)</li>
       
     </ul>
-    <p>Using GCkey, you have 2 options to register for MSCA:<br>
+    <p>Using GCkey, you will need to complete the following to register for MSCA:<br>
     </p>
-	  <h2>Option 1  (Recommended) - Register for MSCA with GCKey and the new SDIV solution</h2>
-	  
-	  <p></p>
+
     <div class="well">
       
       <ol class="row list-unstyled hidden-xs">
         <li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>
-        Sign up for GCKey (if you don’t have it)</a><br>Then choose the one of the 2 following option:</li>
+        Sign up for GCKey (if you don’t have it)</a><br></li>
 		<li class="col-md-3"><a href="#sdiv"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>
           Option 1 - Digitally verify your identity using the SDIV solution</a><br>*This option will instantly grant you access to MSCA.</li>
 		<li class="col-md-3"><a href="#request-code" class="text-center"><img src="https://www.canada.ca/content/dam/esdc-edsc/images/services/benefits/publicpensions/cpp-disability-benefit/plain-envelope-clr.png" class="center-block" alt=""><br>
-          Option 2 - Request a PAC</a><br>This option will take 7 to 10 business days</li>  
+          Option 2 - Request a PAC</a><br>*This option will take 7 to 10 business days</li>  
 
         <li class="col-md-3"><a href="#register-msca"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>
           Register for MSCA with your GCKey</a></li>
