--- a/scenarioA/services/my-account/GCKey/sdiv-2.html
+++ b/scenarioA/services/my-account/GCKey/sdiv-2.html
@@ -211,12 +211,15 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <p>A GCKey is a unique electronic credential issued by the Government of Canada for use with online Government services. To use GCKey to access My Service Canada Account (MSCA) you must:</p>
     <ul>
       <li>have a GCKey ID</li>
-	  <li>use the new Simplified Digital Identity Validation (SDIV) solution, or</li>
-      <li>have a Personal Access Code (PAC)</li>
-      
+	  <li>validate your identity using:
+	    <ul>
+	      <li>Option 1: Simplified Digital Identity Validation (SDIV) solution, or</li>
+	      <li>Option 2: Personal Access Code (PAC)	  </li>
+	    </ul>
+	  </li>
     </ul>
-    <p>Using GCkey, you will need to complete the following to register for MSCA:<br>
-    </p>
+    <h2 class="h3">How to register for MSCA with GCKey
+    </h2>
 
     <div class="well">
       
