--- a/scenarioA/services/my-account/GCKey/sdiv-2.html
+++ b/scenarioA/services/my-account/GCKey/sdiv-2.html
@@ -213,7 +213,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <li>have a GCKey ID</li>
 	  <li>validate your identity using:
 	    <ul>
-	      <li>Option 1: Simplified Digital Identity Validation (SDIV) solution, or</li>
+	      <li>Option 1 (recommended): Simplified Digital Identity Validation (SDIV) solution, or</li>
 	      <li>Option 2: Personal Access Code (PAC)	  </li>
 	    </ul>
 	  </li>
@@ -249,7 +249,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 </section>
 	  
 	  <section>
-<h2 id="sdiv">Digitally verify your identity using the SDIV solution</h2>
+<h2 id="sdiv">Option 1 - Digitally verify your identity using the SDIV solution</h2>
   <p>This new Simplified Digital Identity Validation (SDIV) solution will allow you to register to MSCA in a quicker and safer way. Once you have registered or logged with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
 	  
 	<p>This new real-time identity verification will allow you to access MSCA features instantly, rather then waiting 7 to 10 business days to obtain your PAC.</p>  
@@ -260,7 +260,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 	  
 	  
 	  
-    <h2 id="request-code">Request a PAC</h2>
+    <h2 id="request-code">Option 2 - Request a PAC</h2>
   <p>A PAC is your key to accessing secure online services. Service Canada will provide you with a PAC. You need this code to register for MSCA with GCKey.</p>
   <p><strong>You can request a PAC:</strong></p>
   <details>
