--- a/scenarioA/services/my-account/GCKey/sdiv.html
+++ b/scenarioA/services/my-account/GCKey/sdiv.html
@@ -211,13 +211,16 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <p>A GCKey is a unique electronic credential issued by the Government of Canada for use with online Government services. To use GCKey to access My Service Canada Account (MSCA) you must:</p>
     <ul>
       <li>have a GCKey ID</li>
-	  <li>use the new Simplified Digital Identity Validation (SDIV) solution, or</li>
-      <li>have a Personal Access Code (PAC)</li>
-      
+      <li>validate your identity       using:
+        <ul>
+          <li>Option 1 (recommended): use the new Simplified Digital  Identity Validation (SDIV) solution, <strong>or</strong></li>
+          <li>Option 2:  Personal Access Code (PAC)
+        <br>
+  </li>
+        </ul>
+      </li>
     </ul>
-    <p>Using GCkey, you have 2 options to register for MSCA:<br>
-    </p>
-	  <h2>Option 1  (Recommended) - Register for MSCA with GCKey and the new SDIV solution</h2>
+	  <h2>Option 1  (Recommended) - Register for MSCA with GCKey and the new SDIV</h2>
 	  
 	  <p>*This option will instantly grant you access to MSCA.</p>
     <div class="well">
@@ -248,7 +251,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       </ol>
       
     </div>
-    <p>If you  already have a GCKey, want to use the SDIV solution or have a PAC:<br>
+    <p>If you  already have a GCKey and want to use the SDIV solution or have a PAC:<br>
       <a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-in.html" class="btn btn-primary">Register now</a></p>
 
 	  
@@ -256,14 +259,14 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
   <h2 id="sign-up-gckey">Sign up for GCKey (if you don’t have it) </h2>
   <p>Use your GCKey to access multiple Government of Canada online <a href="https://clegc-gckey.gc.ca/j/eng/ES-01?ReqID=S211822A89A8FEA6CC28C9599821A70E73F71E581A">Services</a>.</p>
   <p><a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://clegc-gckey.gc.ca&amp;AppCode=MSCA_SC">Sign up for a GCKey</a> user ID and password if you do not have one. If you have forgotten an existing GCKey user ID you will need to create a new one.</p>
-	<p>You will not need your PAC for this step.</p>
+	<p>Note: You will not need your PAC for this step.</p>
 </section>
 	  
 	  <section>
 <h2 id="sdiv">Digitally verify your identity using the SDIV solution</h2>
-  <p>This new Simplified Digital Identity Validation (SDIV) solution will allow you to register to MSCA in a quicker and safer way. Once you have registered or logged with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
+  <p>The new SDIV solution will allow you to register for MSCA in a quicker and secured way. Once  registered or signed in with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
 	  
-	<p>This new real-time identity verification will allow you to access MSCA features instantly, rather then waiting 7 to 10 business days to obtain your PAC.</p>  
+	<p>This new real-time identity verification will allow you to access MSCA features instantly.</p>  
 	  
 	  <p>For more information, please refer to our <a href="#">SDIV solution FAQ</a> page.</p> 
 
