--- a/scenarioA/services/my-account/GCKey/sdiv-2.html
+++ b/scenarioA/services/my-account/GCKey/sdiv-2.html
@@ -213,7 +213,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <li>have a GCKey ID</li>
 	  <li>validate your identity using:
 	    <ul>
-	      <li>Option 1 (recommended): Simplified Digital Identity Validation (SDIV) solution, or</li>
+	      <li>Option 1 (recommended): use the new Simplified Digital Identity Validation (SDIV) solution, <strong>or</strong></li>
 	      <li>Option 2: Personal Access Code (PAC)	  </li>
 	    </ul>
 	  </li>
@@ -227,7 +227,8 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
         <li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>
         Sign up for GCKey (if you don’t have it)</a><br></li>
 		<li class="col-md-3"><a href="#sdiv"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>
-          Option 1 - Digitally verify your identity using the SDIV solution</a><br>*This option will instantly grant you access to MSCA.</li>
+          Option 1 - Digitally verify your identity using the SDIV</a><br>
+          *This option will instantly grant you access to MSCA.</li>
 		<li class="col-md-3"><a href="#request-code" class="text-center"><img src="https://www.canada.ca/content/dam/esdc-edsc/images/services/benefits/publicpensions/cpp-disability-benefit/plain-envelope-clr.png" class="center-block" alt=""><br>
           Option 2 - Request a PAC</a><br>*This option will take 7 to 10 business days</li>  
 
@@ -241,7 +242,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-in.html" class="btn btn-primary">Register now</a></p>
 
 	  
-	  <section>
+    <section>
   <h2 id="sign-up-gckey">Sign up for GCKey (if you don’t have it) </h2>
   <p>Use your GCKey to access multiple Government of Canada online <a href="https://clegc-gckey.gc.ca/j/eng/ES-01?ReqID=S211822A89A8FEA6CC28C9599821A70E73F71E581A">Services</a>.</p>
   <p><a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://clegc-gckey.gc.ca&amp;AppCode=MSCA_SC">Sign up for a GCKey</a> user ID and password if you do not have one. If you have forgotten an existing GCKey user ID you will need to create a new one.</p>
@@ -249,13 +250,11 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 </section>
 	  
 	  <section>
-<h2 id="sdiv">Option 1 - Digitally verify your identity using the SDIV solution</h2>
-  <p>This new Simplified Digital Identity Validation (SDIV) solution will allow you to register to MSCA in a quicker and safer way. Once you have registered or logged with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
+<h2 id="sdiv">Option 1 - Digitally verify your identity using the SDIV</h2>
+  <p>The new SDIV solution will allow you to register for MSCA in a quicker and secured way. Once registered or signed in with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
 	  
-	<p>This new real-time identity verification will allow you to access MSCA features instantly, rather then waiting 7 to 10 business days to obtain your PAC.</p>  
-	  
-	  <p>For more information, please refer to our <a href="#">SDIV solution FAQ</a> page.</p> 
-
+	<p>This new real-time identity verification will allow you to access MSCA features instantly.</p>
+	For more information, please refer to our <a href="#">SDIV solution FAQ</a> page. 
 	  </section>
 	  
 	  
