--- a/scenarioA/services/my-account/GCKey/sdiv-2.html
+++ b/scenarioA/services/my-account/GCKey/sdiv-2.html
@@ -213,7 +213,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <li>have a GCKey ID</li>
 	  <li>validate your identity using:
 	    <ul>
-	      <li>Option 1 (recommended): use the new Simplified Digital Identity Validation (SDIV) solution, <strong>or</strong></li>
+	      <li>Option 1 (recommended): use the new Simplified Digital Identity Validation (SDIV), <strong>or</strong></li>
 	      <li>Option 2: Personal Access Code (PAC)	  </li>
 	    </ul>
 	  </li>
