--- a/scenarioA/services/my-account/GCKey/sdiv.html
+++ b/scenarioA/services/my-account/GCKey/sdiv.html
@@ -213,7 +213,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <li>have a GCKey ID</li>
       <li>validate your identity       using:
         <ul>
-          <li>Option 1 (recommended): use the new Simplified Digital  Identity Validation (SDIV) solution, <strong>or</strong></li>
+          <li>Option 1 (recommended): use the new Simplified Digital  Identity Validation (SDIV), <strong>or</strong></li>
           <li>Option 2:  Personal Access Code (PAC)
         <br>
   </li>
@@ -229,7 +229,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
         <li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>
         Sign up for GCKey (if you don’t have it)</a></li>
         <li class="col-md-3"><a href="#sdiv"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>
-          Digitally verify your identity using the SDIV solution</a></li>
+          Digitally verify your identity using SDIV</a></li>
         <li class="col-md-3"><a href="#register-msca"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>
           Register for MSCA with your GCKey</a></li>
       </ol>
@@ -263,7 +263,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 </section>
 	  
 	  <section>
-<h2 id="sdiv">Digitally verify your identity using the SDIV solution</h2>
+<h2 id="sdiv">Digitally verify your identity using  SDIV</h2>
   <p>The new SDIV solution will allow you to register for MSCA in a quicker and secured way. Once  registered or signed in with your GCKey credential, you will be prompted to digitally verify your identity with Verified.Me by sharing information from your financial institution.</p>
 	  
 	<p>This new real-time identity verification will allow you to access MSCA features instantly.</p>  
